--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Storia della Musica Elettroacustica</title>
+  <title>Leggi della Gestalt</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -72,26 +72,21 @@
   <!-- Navbar-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
 
-
-<!-- Header-->
-<section data-bs-version="5.1" class="info3 cid-sYzbPCvQ7r mbr-parallax-background" id="info3-1g">
-  <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
-  </div>
-  <div class="container">
-      <div class="row justify-content-center">
-          <div class="card col-12 col-lg-10">
-              <div class="card-wrapper">
-                  <div class="card-box align-center">
-                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>STORIA DELLA MUSICA ELETTROACUSTICA</strong></h4>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+  <!-- Title-->
+<section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-md-12 col-lg-10">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
+            </div>
+        </div>
+    </div>
 </section>
 
 
-  <!-- Index-->
+  <!-- Text-->
+
 
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
@@ -102,11 +97,84 @@
                     <br>
                     <br>
                     Quando analizziamo un pezzo di cui non sappiamo nulla e di cui non esiste partitura, ammesso poi che questi testi siano analizzabili, sulla base di che cosa analizziamo un flusso sonoro isolando degli elementi?
+                    <br>
+                    Per giustificare i nostri elementi di distinzione ricorriamo a dei principi gestaltici, negli anni '70 '80 riportati nel dominio dell'ascolto. Applichiamo questi principi se non possiamo appellarci a nessun tipo di repertorio di concetti che ti permettono di convalidare le tue osservazioni. Principi di base che ci permettono di giustificare l'ovvio.
+                    <br>
+                    <br>
+                    <strong>Comuni leggi della Gestalt:</strong>
+                    <br>
+                    <br>
+                    </p>
+                    <ul>
+                    <li><strong>Prossimità/lontananza:</strong> frequenza tempo, aggrego flussi vicini tra loro nello spettro, se non ho differenza di spettro la prossimità posso averla anche nel tempo.
+                    </li>
+                    <li><strong>Similarità/differenza:</strong> riproduzione di uno schema qualsiasi produce similarità. Profili dinamici, timbro.
+                    </li>
+                    <li><strong>Figura/sfondo:</strong> collegata al principio di pregnanza (che funziona molto bene). Basso Albertino sfondo/melodia figura, evidente. Tessitura/gesto nella musica elettronica. Gesto o figura attacco individuabile e destino d'estinzione paragonabile alla memoria di breve termine, tessitura perde questi principi, è continua nel tempo. Immaginare un gesto umano (se sento un tonfo ricostruisco la fonte, con un fruscio no). Questione di percezione di profili energetici.
+                    </li>
+                    <li><strong>Chiusura:</strong> non è interessantissimo. Su un pianoforte in cui non funziona un tasto, ci pensa il mio cervello a sentirlo (ricrearlo). Nella musica elettronica non appare evidente perché non abbiamo dei punti di riferimento forti, pattern preesistenti.
+                    </li>
+                    <li><strong>Destino comune:</strong> quei tipi di accadimenti sonori in cui due o più flussi condividono aspetti direzionali che ce li fanno considerare unici. Aggregare cose che prima mi sembravano separate: se io inizio e sento due cose diverse, ma poi capisco che si ripresentano sempre allo stesso modo le aggrego grazie all'esperienza maturata con l'ascolto.
+                    </li>
+                    <li><strong>Buona continuazione:</strong> in termini matematici, una derivata simile tra due punti ci consente la continuità. Comportamento frequenziale tendenzialmente simile, anche se ho due timbri diversi, mi fa percepire la continuità dell'evento. Atteggiamenti tendenziali della percezione.
+                    </li>
+                    <li><strong>Pregnanza:</strong> risolve i problemi di figura sfondo.
+                    </li>
+                    <li><strong>Esperienza o apprendimento:</strong> fondamentalmente reinterpretare quello che abbiamo ascoltato alla luce di conferma e disconferma di quello che abbiamo sentito prima.
+                    </li>
+                    </ul>
+                    <br>
+                    <br>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                    È importante distinguere i vari elementi per definire l’atteggiamento di articolazione e variabilità dei suoni in un flusso complesso. Non chiamiamo i vari flussi voci, poiché la voce è un concetto astratto, ed il concetto di voce porta con se un’idea di omogeneità. La mancanza di supporti concettuali fa si che prevalga il concetto di flusso piuttosto che quello di voce. Il flusso ci permette di classificare ciò che non ha classe.
+                    </p>
+                    <br>
+                    <br>
                   </p>
                 </div>
             </div>
         </div>
     </section>
+
+  <!-- Video-->
+<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
+    <div class="container">
+        <div class="title-wrapper mb-5">
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-4 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        <strong>György Ligeti - String quartet No.2</strong>
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<br>
+<br>
+
+
+<!-- Prev/Next-->
+<section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-10">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <!-- Footer-->
 <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
