--- a/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
+++ b/pages/learn/storia_elettroacustica/nascita_della_musica_concreta.html
@@ -226,7 +226,32 @@
                   <strong>Il Concretismo sancisce dunque la nascita della musica elettroacustica con i 5 studi sui rumori del 1948</strong>, utilizzando suoni e rumori presi dalla realtà. Gli strumenti elettronici, acquisiscono un loro linguaggio. Schaeffer fonda lo studio d’Essai e poi il GRMC, divenuto in seguito INA/GRM. Nel 1948 Schaeffer utilizza la tecnologia basandosi su una sua idea, ma senza avere alcun contatto con la musica d’avanguardia, utilizzerà infatti il sillon fermè (loop realizzato con solco chiuso su 78 giri), il reverse e il rallentamento e la velocizzazione dei frammenti.
                   <br>
                   <br>
-                  É da qui che nasce la domanda che attraversa il secolo, <strong>cosa posso farci musicalmente con questi suoni elettronici?</strong>
+                  <strong>Possiamo affermare che Schaeffer si ponga 3 presupposti poietici:</strong>
+                  <br>
+                  <br>
+                  </p>
+                  <ul>
+                    <li><strong>Eredità della filmografia dadaista </strong>(pellicole anni 1922-29, con parole in loop, immagini decontestualizzate).</li>
+                    <li><strong>Tecnologia del disco e della diffusione attraverso altoparlanti</strong>(competenze tecnologiche, era un ingegnere, si riveleranno anche artisticamente le potenzialità e le limitazioni del disco).</li>
+                    <li><strong>Cultura radiofonica</strong>(S. operava infatti alla radio, racconti attraverso la radio, solamente la cultura radiofonica può supportare la sperimentazione, Ritratto di città di Berio e Maderna si inserirà in questo contesto radiofonico). Alla musica elettronica (escludendo totalmente il concretismo) si arriverà però con strumenti elettrici realizzati per suonare, non per mezzi radiofonici (anche se i vari generi dal dodecafonismo a Schaeffer, a Karlheinz_Stockhausen vengono spesso catalogati sotto il calderone della non-music, polverizzazione di generi per cercare di comprendere qualcosa ma che accomuna esperienze totalmente diverse).</li>
+                  </ul>
+                  <br>
+                  <br>
+                </p>
+                <p class="mbr-text mbr-fonts-style display-7">
+                  <strong>Il fatto musicale non si può limitare a cosa ascoltiamo, ma a dove lo ascoltiamo e come lo ascoltiamo.</strong> Perché nel 1948 accettano e subiscono questi studi di rumore senza scandalizzarsi? Perché non viene chiamata musica. La stessa cosa ascoltata in una sala di concerto diventa inaccettabile. Schaeffer trasmette i suoi studi come un radiodramma, dunque con un sottinteso narrativo. (Tra le ascendenze cinematografiche più rilevanti legate al concretismo, troviamo le esperienze dei fratelli Lumiere). Ma l’esigenza primaria dei concretisti forse fu quella di dominare il suono che affrontiamo nella quotidianità (l’FM aprì diversamente, una civiltà del suono).
+                  <br>
+                  <br>
+                  <strong>Musica Concreta:</strong> è per Schaeffer una musica astratta veicolata da linguaggi e grafie, convenzioni puramente astratte, intellegibili, ma di cui non è mediata la rappresentazione, ma è presa dalla realtà, non vi è partitura, ed il tutto è concreto poiché non ha mediazioni di tipo simbolico. In seguito il termine musica concreta diviene aggettivo di una musica realizzata con suoni “trovati”, suoni reali, questa tipologia di musica non è soggetta ad astrazione come la musica tradizionale, poiché diviene un discorso puramente sonoro.
+                  <br>
+                  <br>
+                  <strong>Musica Acusmatica:</strong> oggi per acusmatico viene definito un concerto in la musica viene riprodotta solamente attraverso altoparlanti, mentre in realtà il termine starebbe ad indicare, un ascolto di cui non riconosco la fonte di creazione del suono, dunque concentro l’attenzione sul suono stesso. Il suono fa dunque associare idee. Oggi intendiamo la musica acusmatica, come quella che riproduciamo attraverso altoparlanti. Se di un brano intendiamo la modalità con cui sono stati prodotti i suoni, permea il significato mimetico che viene trasportato all'ascoltatore.
+                  <br>
+                  <br>
+                  I 5 studi sul rumore danno la nascita alla musica concreta, si chiama cosi per opporsi alla musica astratta, non è mediata attraverso una rappresentazione su partitura ma arriva subito. Schaeffer non intende rivendicare qualcosa di migliore e concreto, concreto perché non ha mediazioni di tipo simbolico. Un FA è astratto, una pietra che cade nell'acqua non può esserlo. Un conto è quello che intendono gli autori, un conto è come vengono trasformate. Degradazione concettuale del termine musica concreta, diventa il termine per definire la musica fatta con i rumori.
+                  <br>
+                  <br>
+                  Segue la musica di sintesi, apparecchi elettronici che non possono ricavare suono dalla realtà, si avvicina all'estrazione. Essa si oppone alla musica concreta.
                 </p>
               </div>
           </div>
