--- a/pages/learn/storia_elettroacustica/vuoto.html
+++ b/pages/learn/storia_elettroacustica/vuoto.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Aspetti Mimetico-Acustico</title>
+  <title>Leggi della Gestalt</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Storia della Musica Elettroacustica</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Aspetti Mimetico-Acustico</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Leggi della Gestalt</strong></h4>
             </div>
         </div>
     </div>
@@ -93,8 +93,8 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Simon Emmerson ha elaborato un paradigma molto efficace. Stabilisce una polarità tra aspetti mimetici ed aspetti puramente acustici. Ci sono pezzi in cui è più importante l'aspetto morfologico del suono, altri in cui il mondo reale irrompe.
-                    </p>
+
+                  </p>
                 </div>
             </div>
         </div>
@@ -107,87 +107,20 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/8C6XlF_2VrQ" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>Luc Ferrari - Presque Rien n1 (1970)</strong>
+                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Luc Ferrari registrazione di una scena sonora. Ho solo inquadrato la scena (aspetto cinematografico).
+                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
                     </p>
                 </div>
             </div>
         </div>
     </div>
-</section>
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/988jPjs1gao" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>John Chowning - Stria (1977)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/_qi4hgT_d0o" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>Karlheinz Stockhausen - Studio II (1954)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
-</section>
-
-
-<!-- Video-->
-<section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
-  <div class="container">
-      <div class="title-wrapper mb-5">
-      </div>
-      <div class="row align-items-center">
-          <div class="col-12 col-lg-4 video-block">
-              <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/MfxmMjlU1wE" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-          </div>
-          <div class="col-12 col-lg">
-              <div class="text-wrapper">
-                  <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                      <strong>David Wessel - Antony (1977)</strong>
-                  </h5>
-                  <p class="mbr-text mbr-fonts-style display-7">
-                  </p>
-              </div>
-          </div>
-      </div>
-  </div>
 </section>
 
 <br>
