--- a/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html
+++ b/pages/learn/storia_elettroacustica/musica_concreta_primo_periodo.html
@@ -86,19 +86,44 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Nel 1953 Schaeffer ha lo scontro con la musica contemporanea al festival di Donau Eschingen con l’Orfeo ’53 (uno dei primi esempi di spazializzazione). Orfeo 53 fu, oltre che fischiato, punito perché eseguito in un contesto non adeguato. La critica che riceve, lo porta a riflettere e l’accusa di collagismo (che viene considerata una forma di dilettantismo), risiede sul fatto che la scelta dei suoni è basata su suoni trovati per caso. Schaeffer deduce che al musicista concreto manca il dominio della materia sonora, è come se raccogliesse conchiglie, mentre il musicista tradizionale decide il suono che vuole (trovare anziché cercare), manca il dominio assoluto sul suono.
+                    <br>
+                    <br>
+                    Schaeffer dunque catalogherà i suoni per risolvere il problema dell’infinità dei suoni, catalogandoli per:
+                    <ul>
+                      <li>durata<li>
+                      <li>profilo energetico<li>
+                      <li>grana<li>
+                      <li>tessitura<li>
+                      <li>struttura della durata<li>
+                  </ul>
                   </p>
                 </div>
             </div>
         </div>
     </section>
+
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Schaeffer definisce dunque l’Oggetto Sonoro, realizzando il Trattato degli oggetti sonori musicali (1966). Il GRM diviene dunque una comunità di musicisti che segue la lezione schaefferiana sull'oggetto sonoro, e Schaeffer riesce a risolvere il paradigma dell’infinito sonoro, attraverso la catalogazione con griglie dei suoni Schaeffer approccia il discorso nel trattato fenomenologicamente. L’esperienza acusmatica è dunque definibile come esperienza puramente estesica. Non ha senso dire di conoscere tutti i suoni del mondo perché non sono numerabili.
+                      <br>
+                      <br>
+                      Indagare come fare musica coi rumori. Ogni studio formula una possibile ipotesi su che cosa possa significare fare musica coi rumori. Non è così scontato.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
   <!-- Video-->
 <section data-bs-version="5.1" class="video4 cid-sZfnzA3tRW" id="video4-25">
@@ -107,15 +132,14 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-4 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Yx_Q_mIth0Q" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/CTf0yE15zzI" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
-                        <strong>György Ligeti - String quartet No.2 (1968)</strong>
+                        <strong>Pierre Schaeffer - Études de bruits (1948)</strong>
                     </h5>
                     <p class="mbr-text mbr-fonts-style display-7">
-                      Quartetto nº2 di Ligeti, non sentiamo ad esempio le voci ma un singolo flusso, la percezione delle voci è oltretutto un fattore culturale, mentre la percezione dei flussi è un fattore percettivo.
                     </p>
                 </div>
             </div>
